# kiss_icp_bazel

./: BUILD.bazel  MODULE.bazel  debug-info-in-registration.patch  internal_configure.bzl
patches/: debug-info-in-registration.patch
