module(
    name = "kiss_icp_bazel",
    version = "1.2.3",
    compatibility_level = 1,
)
single_version_override(
    module_name = "kiss_icp_bazel",
    patch_strip = 1,
    patches = [
        "debug-info-in-registration.patch",
    ],
)

bazel_dep(name = "eigen", version = "5.0.0")
bazel_dep(name = "onetbb", version = "2022.1.0")
bazel_dep(name = "robin-map", version = "1.3.0")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "sophus", version = "1.22.10.bcr.1")

# Creates a `http_archive` for nanobind and robin-map.
internal_configure = use_extension("//:internal_configure.bzl", "internal_configure_extension")
use_repo(internal_configure, "kiss_icp")
